--- a/HW3_Kudela_Yu_Young_Su_Rupani.ipynb
+++ b/HW3_Kudela_Yu_Young_Su_Rupani.ipynb
@@ -1241,7 +1241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Q12 8 points] Plots and reasons"
+    "## [Q12 8 points] Plots and reasons"
    ]
   },
   {
